@@ -9,6 +9,7 @@
 - Fixed issues:
 	NX-333 (Add windows service descriptions for both server and agent)
 	NX-622 (Alerts will not be generated in certain conditions: events, that persist after maintenence and node down after unreachable)
+	NX-640 (File manager should show file owner and permissions)
 	NX-716 (Server configurator on Windows should be marked as require-administrator)
 	NX-922 (Service check template objects disappears after server restart)
 	NX-1097 (Configuration option to ignore alarm's helpdesk state when doing resolve or terminate)
